# TASK-52

./: .gitignore  bugfix-1.jsonl  metadata.json
.tmp/: audit_report-1-fix_check.md  audit_report-1.md  audit_report-2-fix_check.md  audit_report-2.md  delivery_acceptance_audit.md  delivery_architecture_audit.md  test_coverage_and_readme_audit_report.md
docs/: api-spec.md  api.md  architecture.md  design.md
repo/: .gitattributes  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run_tests.sh
repo/API_tests/: acceptance_boundary_test.sh  audit_fixes_test.sh  blockers_api_test.sh  coverage_gap_api_test.sh  frontend_draft_test.sh  full_stack_test.sh  remediation_api_test.sh  remediation_regression_test.sh  test_helpers.sh
repo/docs/: api-spec.md  design.md  questions.md
repo/migrations/: 0010_anonymization_and_logs.sql  0011_evidence_retention_and_compression.sql  0012_transfers_stock_dashboard_filters.sql  0014_evidence_storage_path.sql
repo/src/backend/: Cargo.toml  app.rs  common.rs  config.rs  crypto.rs  jobs.rs
repo/src/backend/middleware/: session.rs
repo/src/backend/modules/: mod.rs
repo/src/backend/modules/address_book/: handlers.rs
repo/src/backend/modules/admin/: handlers.rs
repo/src/backend/modules/auth/: handlers.rs
repo/src/backend/modules/dashboard/: handlers.rs
repo/src/backend/modules/evidence/: handlers.rs
repo/src/backend/modules/inspections/: handlers.rs
repo/src/backend/modules/intake/: handlers.rs
repo/src/backend/modules/stock/: handlers.rs
repo/src/backend/modules/supply/: handlers.rs
repo/src/backend/modules/traceability/: handlers.rs
repo/src/backend/modules/transfers/: handlers.rs
repo/src/backend/modules/users/: handlers.rs
repo/src/frontend/: Cargo.toml  app.rs  draft.rs  index.html  main.rs
repo/src/frontend-tests/: Cargo.toml  lib.rs
repo/src/frontend-tests/tests/: auth_form_test.rs  dashboard_view_test.rs  intake_form_test.rs  session_behavior_test.rs  ui_format_test.rs
repo/src/frontend/api/: client.rs
repo/src/frontend/components/: nav.rs
repo/src/frontend/logic/: auth_form.rs  dashboard_filter.rs  intake_form.rs  mod.rs  session.rs  ui_format.rs
repo/src/frontend/pages/: address_book.rs  admin.rs  checkin.rs  dashboard.rs  evidence_search.rs  evidence_upload.rs  intake.rs  login.rs  mod.rs  profile.rs  reports.rs  supply.rs  traceability.rs  workspace.rs
repo/src/shared/: Cargo.toml  lib.rs
