[package]
name = "fieldtrace-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fieldtrace-backend"
path = "main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.5", features = ["fs"] }
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["getrandom"] }
axum-extra = { version = "0.9", features = ["cookie"] }
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
fieldtrace-shared = { path = "../shared" }
